[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/WorldListUI.gd" id="1"]

[node name="WorldListUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="WorldsList" type="ItemList" parent="."]
anchor_left = 0.02
anchor_top = 0.06
anchor_right = 0.58
anchor_bottom = 0.94
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.62
anchor_top = 0.06
anchor_right = 0.98
anchor_bottom = 0.94
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="Buttons"]
text = "Play"

[node name="CreateButton" type="Button" parent="Buttons"]
text = "Create"

[node name="RenameButton" type="Button" parent="Buttons"]
text = "Rename"

[node name="DeleteButton" type="Button" parent="Buttons"]
text = "Delete"

[node name="DuplicateButton" type="Button" parent="Buttons"]
text = "Duplicate"

[node name="RefreshButton" type="Button" parent="Buttons"]
text = "Refresh"